--- a/Xamarin.Utils/Xamarin.Forms.Utils/Controls/ProfileBar.xaml
+++ b/Xamarin.Utils/Xamarin.Forms.Utils/Controls/ProfileBar.xaml
@@ -9,9 +9,9 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Image Source="{Binding Photo}" Grid.Column="0"/>
-            <Label Text="{Binding Name}" Grid.Column="1"/>
-            <Button Text="Logout" Grid.Column="2" Clicked="LogoutButton_Clicked"/>
+            <Image Source="{Binding Photo}" Aspect="AspectFit" VerticalOptions="Center" WidthRequest="50" HeightRequest="50"/>
+            <Label Text="{Binding Name}" Grid.Column="1" VerticalOptions="Center"/>
+            <Button Text="Logout" Grid.Column="2" Clicked="LogoutButton_Clicked" VerticalOptions="Center"/>
         </Grid>
     </ContentView.Content>
 </ContentView>
